--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,15 @@
 
     <modules>
         <module>jboss-eap-7.1</module>
-        <module>quarkus-1.8</module>
-        <module>quarkus-1.9</module>
         <module>quarkus-1.10</module>
         <module>quarkus-1.11</module>
+        <module>quarkus-1.12</module>
+        <module>quarkus-1.13</module>
         <module>wildfly-19</module>
         <module>wildfly-20</module>
         <module>wildfly-21</module>
         <module>wildfly-22</module>
+        <module>wildfly-23</module>
         <module>update-checker</module>
     </modules>
 
@@ -79,12 +80,11 @@
         <!-- non-apache maven plugin versions -->
         <asciidoctor.plugin.version>2.1.0</asciidoctor.plugin.version>
         <build-helper.plugin.version>3.2.0</build-helper.plugin.version>
-        <dependency-check.plugin.version>6.0.4</dependency-check.plugin.version>
-        <docker.plugin.version>0.34.1</docker.plugin.version>
-        <jacoco.plugin.version>0.8.6</jacoco.plugin.version>
+        <docker.plugin.version>0.36.0</docker.plugin.version>
+        <jacoco.plugin.version>0.8.7</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>5.0.1</openapi-generator.plugin.version>
-        <swagger-codegen.plugin.version>3.0.24</swagger-codegen.plugin.version>
+        <openapi-generator.plugin.version>5.1.1</openapi-generator.plugin.version>
+        <swagger-codegen.plugin.version>3.0.26</swagger-codegen.plugin.version>
         <versions.plugin.version>2.7</versions.plugin.version>
         <wildfly.plugin.version>2.0.2.Final</wildfly.plugin.version>
 
@@ -92,7 +92,7 @@
         <maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
         <maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
-        <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
+        <maven.dependency.plugin.version>3.2.0</maven.dependency.plugin.version>
         <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
         <maven.ear.plugin.version>3.2.0</maven.ear.plugin.version>
         <maven.ejb.plugin.version>3.1.0</maven.ejb.plugin.version>
@@ -100,7 +100,7 @@
         <maven.failsafe.plugin.version>2.22.2</maven.failsafe.plugin.version>
         <maven.install.plugin.version>2.5.2</maven.install.plugin.version>
         <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
-        <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
+        <maven.javadoc.plugin.version>3.3.0</maven.javadoc.plugin.version>
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
         <maven.resources.plugin.version>3.2.0</maven.resources.plugin.version>
         <maven.scm.plugin.version>1.11.2</maven.scm.plugin.version>
@@ -111,17 +111,17 @@
         <maven.war.plugin.version>3.3.1</maven.war.plugin.version>
 
         <!-- artifact versions -->
-        <apache.commons.lang3.version>3.11</apache.commons.lang3.version>
+        <apache.commons.lang3.version>3.12.0</apache.commons.lang3.version>
         <logback.version>1.2.3</logback.version>
-        <lombok.version>1.18.18</lombok.version>
+        <lombok.version>1.18.20</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
         <slf4j.version>1.7.30</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.12.1</jackson-2-version>
-        <jackson-bom.version>2.12.1</jackson-bom.version>
+        <jackson-2-version>2.12.3</jackson-2-version>
+        <jackson-bom.version>2.12.3</jackson-bom.version>
 
         <!-- latest version for projects independent of an application server (AS) -->
         <!-- with an AS it is redefined to be the version used by the AS's resteasy artifact -->
@@ -136,19 +136,19 @@
         <!-- byte code manipulation tools, mostly used for tests, but not exclusively -->
         <!-- note that byte-buddy pulls in asm, so asm.version should be the one used by the given byte-buddy -->
         <!-- (check `version.asm` in maven3_repo\net\bytebuddy\byte-buddy-parent\x.y.z\byte-buddy-parent-x.y.z.pom) -->
-        <asm.version>9.0</asm.version>
-        <byte-buddy.version>1.10.20</byte-buddy.version>
+        <asm.version>9.1</asm.version>
+        <byte-buddy.version>1.11.2</byte-buddy.version>
 
         <!-- testing and static analysis -->
         <opentest4j.version>1.2.0</opentest4j.version>
-        <junit.platform.version>1.7.1</junit.platform.version>
-        <junit.jupiter.version>5.7.1</junit.jupiter.version>
+        <junit.platform.version>1.7.2</junit.platform.version>
+        <junit.jupiter.version>5.7.2</junit.jupiter.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <mockito.version>3.7.7</mockito.version>
-        <equalsverifier.version>3.5.4</equalsverifier.version>
-        <json.unit.version>2.24.0</json.unit.version>
+        <mockito.version>3.11.1</mockito.version>
+        <equalsverifier.version>3.6.1</equalsverifier.version>
+        <json.unit.version>2.26.0</json.unit.version>
         <jsonassert.version>1.5.0</jsonassert.version>
-        <restassured.version>4.3.3</restassured.version>
+        <restassured.version>4.4.0</restassured.version>
         <wiremock.version>2.27.2</wiremock.version>
 
         <!-- Docker has a special DNS name 'host.docker.internal', but only starting with Docker 18.03... -->
@@ -657,26 +657,6 @@
                             <configuration>
                                 <propertyName>jacoco.integration.agent.arg</propertyName>
                             </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.owasp</groupId>
-                    <artifactId>dependency-check-maven</artifactId>
-                    <version>${dependency-check.plugin.version}</version>
-                    <configuration>
-                        <format>ALL</format>
-                        <cveValidForHours>24</cveValidForHours>
-                        <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
-                        <failBuildOnCVSS>${owasp.failOnCvss}</failBuildOnCVSS>
-                        <versionCheckEnabled>false</versionCheckEnabled>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <phase>none</phase>
-                            <goals>
-                                <goal>check</goal>
-                            </goals>
                         </execution>
                     </executions>
                 </plugin>
