--- a/quarkus-1.11/pom.xml
+++ b/quarkus-1.11/pom.xml
@@ -17,7 +17,7 @@
 
     <properties>
         <!-- latest Quarkus version -->
-        <quarkus.version>1.11.3.Final</quarkus.version>
+        <quarkus.version>1.11.6.Final</quarkus.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
@@ -56,9 +56,9 @@
         <smallrye.graphql.version>1.0.21</smallrye.graphql.version>
         <smallrye.health.version>2.2.5</smallrye.health.version>
         <smallrye.jwt.version>2.4.1</smallrye.jwt.version>
-        <smallrye.metrics.version>2.4.4</smallrye.metrics.version>
-        <smallrye.openapi.version>2.0.19</smallrye.openapi.version>
-        <smallrye.opentracing.version>1.3.4</smallrye.opentracing.version>
+        <smallrye.metrics.version>2.4.6</smallrye.metrics.version>
+        <smallrye.openapi.version>2.0.22</smallrye.openapi.version>
+        <smallrye.opentracing.version>1.3.5</smallrye.opentracing.version>
         <smallrye.reactive-converter-api.version>1.3.0</smallrye.reactive-converter-api.version>
         <smallrye.reactive-messaging.version>2.7.1</smallrye.reactive-messaging.version>
         <smallrye.reactive-streams-operators.version>1.0.13</smallrye.reactive-streams-operators.version>
@@ -70,7 +70,7 @@
         <io.jaegertracing.version>0.34.3</io.jaegertracing.version>
 
         <!-- Artifact versions provided by Quarkus x.y -->
-        <resteasy.version>4.5.8.SP1</resteasy.version>
+        <resteasy.version>4.5.9.Final</resteasy.version>
         <apache.httpclient.version>4.5.13</apache.httpclient.version>
         <jakarta.json.version>1.1.6</jakarta.json.version>
         <glassfish.jakarta.json.version>1.1.6</glassfish.jakarta.json.version>
