--- a/quarkus-1.13/pom.xml
+++ b/quarkus-1.13/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quarkus-1.9</artifactId>
+    <artifactId>quarkus-1.13</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -17,7 +17,7 @@
 
     <properties>
         <!-- latest Quarkus version -->
-        <quarkus.version>1.9.1.Final</quarkus.version>
+        <quarkus.version>1.13.7.Final</quarkus.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
@@ -49,18 +49,18 @@
         <mp.reactive-messaging.version>1.0</mp.reactive-messaging.version>
         <mp.reactive-streams-operators.version>1.0.1</mp.reactive-streams-operators.version>
         <mp.rest-client.version>1.4.1</mp.rest-client.version>
-        <smallrye.common.version>1.4.0</smallrye.common.version>
-        <smallrye.config.version>1.9.3</smallrye.config.version>
-        <smallrye.context-propagation.version>1.0.13</smallrye.context-propagation.version>
-        <smallrye.fault-tolerance.version>4.3.1</smallrye.fault-tolerance.version>
-        <smallrye.graphql.version>1.0.12</smallrye.graphql.version>
-        <smallrye.health.version>2.2.3</smallrye.health.version>
-        <smallrye.jwt.version>2.3.1</smallrye.jwt.version>
-        <smallrye.metrics.version>2.4.4</smallrye.metrics.version>
-        <smallrye.openapi.version>2.0.10</smallrye.openapi.version>
-        <smallrye.opentracing.version>1.3.4</smallrye.opentracing.version>
-        <smallrye.reactive-converter-api.version>1.2.2</smallrye.reactive-converter-api.version>
-        <smallrye.reactive-messaging.version>2.4.0</smallrye.reactive-messaging.version>
+        <smallrye.common.version>1.5.0</smallrye.common.version>
+        <smallrye.config.version>1.13.1</smallrye.config.version>
+        <smallrye.context-propagation.version>1.1.0</smallrye.context-propagation.version>
+        <smallrye.fault-tolerance.version>4.3.2</smallrye.fault-tolerance.version>
+        <smallrye.graphql.version>1.0.26</smallrye.graphql.version>
+        <smallrye.health.version>2.2.6</smallrye.health.version>
+        <smallrye.jwt.version>2.4.4</smallrye.jwt.version>
+        <smallrye.metrics.version>2.4.6</smallrye.metrics.version>
+        <smallrye.openapi.version>2.0.26</smallrye.openapi.version>
+        <smallrye.opentracing.version>1.3.5</smallrye.opentracing.version>
+        <smallrye.reactive-converter-api.version>1.4.0</smallrye.reactive-converter-api.version>
+        <smallrye.reactive-messaging.version>2.9.0</smallrye.reactive-messaging.version>
         <smallrye.reactive-streams-operators.version>1.0.13</smallrye.reactive-streams-operators.version>
         <!-- quarkus is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
@@ -69,33 +69,39 @@
         <io.opentracing.contrib-jaxrs.version>0.4.1</io.opentracing.contrib-jaxrs.version>
         <io.jaegertracing.version>0.34.3</io.jaegertracing.version>
 
-        <!-- Artifact versions provided by Quarkus 1.9.x -->
-        <resteasy.version>4.5.8.Final</resteasy.version>
+        <!-- Artifact versions provided by Quarkus x.y -->
+        <resteasy.version>4.5.12.Final</resteasy.version>
         <apache.httpclient.version>4.5.13</apache.httpclient.version>
+        <!-- quarkus is excluding jakarta.json-api in favor of the transitive dependency of yasson (see maven3_repo\org\eclipse\yasson\x.x\*.pom) -->
         <jakarta.json.version>1.1.6</jakarta.json.version>
         <glassfish.jakarta.json.version>1.1.6</glassfish.jakarta.json.version>
         <jakarta.json.bind.version>1.0.2</jakarta.json.bind.version>
-        <yasson.version>1.0.8</yasson.version>
+        <yasson.version>1.0.9</yasson.version>
 
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.11.3</jackson-2-version>
-        <jackson-bom.version>2.11.3</jackson-bom.version>
+        <jackson-2-version>2.12.3</jackson-2-version>
+        <jackson-bom.version>2.12.3</jackson-bom.version>
 
-        <infinispan.version>11.0.4.Final</infinispan.version>
-        <hibernate.version>5.4.22.Final</hibernate.version>
+        <infinispan.version>12.0.1.Final</infinispan.version>
+        <hibernate.version>5.4.29.Final</hibernate.version>
 
         <!-- Hibernate 6.0.1.Final is the reference implementation for Bean Validation 2.0 (EE8) -->
         <jakarta.validation.version>2.0.2</jakarta.validation.version>
-        <hibernate.validator.version>6.1.6.Final</hibernate.validator.version>
+        <hibernate.validator.version>6.2.0.Final</hibernate.validator.version>
+        <!-- ojdbc version in the quarkus-jdbc-oracle extension -->
+        <oracle.ojdbc.version>21.1.0.0</oracle.ojdbc.version>
 
         <!-- Quarkus x.y uses Quarkus ARC x.y (based on CDI 2.0) -->
         <jakarta.inject.version>1.0</jakarta.inject.version>
 
         <!-- we encountered IllegalArgumentException: Unsupported api in ASM code when -->
-        <!-- ASM/Byte-Buddy versions didn't match -->
-        <asm.version>8.0.1</asm.version>
-        <!-- last byte-buddy version using ASM 8.0.1 -->
-        <byte-buddy.version>1.10.15</byte-buddy.version>
+        <!-- the ASM version is too old for Byte-Buddy -->
+        <!-- Note: contrary to Wildfly with Quarkus ASM is managed, but not byte-buddy -->
+        <asm.version>9.1</asm.version>
+        <!-- I found the hibernate dependency using 1.10.19, but any newer version using ASM 9.1 should be fine too -->
+        <!-- (unfortunately I don't know if there is a way to express this with maven -->
+        <!-- so just using the same version as in com.six-group.ao.root:root) -->
+        <byte-buddy.version>1.10.22</byte-buddy.version>
     </properties>
 
     <dependencyManagement>
@@ -181,6 +187,10 @@
                     <version>${mp.health.version}</version>
                     <exclusions>
                         <exclusion>
+                            <groupId>javax.enterprise</groupId>
+                            <artifactId>cdi-api</artifactId>
+                        </exclusion>
+                        <exclusion>
                             <groupId>org.osgi</groupId>
                             <artifactId>org.osgi.annotation.versioning</artifactId>
                         </exclusion>
@@ -244,6 +254,12 @@
                     <groupId>org.eclipse.microprofile.rest.client</groupId>
                     <artifactId>microprofile-rest-client-api</artifactId>
                     <version>${mp.rest-client.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>javax.inject</groupId>
+                            <artifactId>javax.inject</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye.common</groupId>
@@ -291,6 +307,12 @@
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-graphql-cdi</artifactId>
                     <version>${smallrye.graphql.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.eclipse.microprofile.graphql</groupId>
+                            <artifactId>microprofile-graphql-api</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -307,16 +329,6 @@
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-jwt</artifactId>
                     <version>${smallrye.jwt.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.jboss.logging</groupId>
-                            <artifactId>jboss-logging</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>javax</groupId>
-                            <artifactId>javaee-api</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -324,16 +336,8 @@
                     <version>${smallrye.metrics.version}</version>
                     <exclusions>
                         <exclusion>
-                            <groupId>javax</groupId>
-                            <artifactId>javaee-api</artifactId>
-                        </exclusion>
-                        <exclusion>
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.osgi</groupId>
-                            <artifactId>org.osgi.annotation.versioning</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -342,6 +346,10 @@
                     <artifactId>smallrye-open-api-core</artifactId>
                     <version>${smallrye.openapi.version}</version>
                     <exclusions>
+                        <exclusion>
+                            <groupId>org.eclipse.microprofile.openapi</groupId>
+                            <artifactId>microprofile-openapi-api</artifactId>
+                        </exclusion>
                         <exclusion>
                             <groupId>com.fasterxml.jackson.core</groupId>
                             <artifactId>jackson-core</artifactId>
@@ -354,34 +362,12 @@
                             <groupId>org.jboss.logging</groupId>
                             <artifactId>jboss-logging</artifactId>
                         </exclusion>
-                        <exclusion>
-                            <groupId>org.osgi</groupId>
-                            <artifactId>org.osgi.annotation.versioning</artifactId>
-                        </exclusion>
                     </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-opentracing</artifactId>
                     <version>${smallrye.opentracing.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.eclipse.microprofile.config</groupId>
-                            <artifactId>microprofile-config-api</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>io.smallrye</groupId>
-                            <artifactId>smallrye-config</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>javax</groupId>
-                            <artifactId>javaee-api</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.osgi</groupId>
-                            <artifactId>org.osgi.annotation.versioning</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye.reactive</groupId>
@@ -471,6 +457,11 @@
                     <version>${infinispan.version}</version>
                 </dependency>
                 <dependency>
+                    <groupId>com.oracle.database.jdbc</groupId>
+                    <artifactId>ojdbc8</artifactId>
+                    <version>${oracle.ojdbc.version}</version>
+                </dependency>
+                <dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-core</artifactId>
                     <version>${hibernate.version}</version>
@@ -533,6 +524,24 @@
                     <groupId>javax.jws</groupId>
                     <artifactId>jsr181-api</artifactId>
                     <version>${javax.jws.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>quarkus-build-tree</id>
+            <!-- Dependency entries for some quarkus extensions -->
+            <!-- To see some dependency versions not noted in the quarkus-bom -->
+            <!-- copy these extensions into a quarkus project and use with quarkus-bootstrap:build-tree -->
+            <dependencies>
+                <dependency>
+                    <!-- to know apache.httpclient.version -->
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-rest-client-jackson</artifactId>
+                </dependency>
+                <dependency>
+                    <!-- to know jakarta.validation.version -->
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-hibernate-validator</artifactId>
                 </dependency>
             </dependencies>
         </profile>
